mdi icon alignment fix

--- a/css/app.css
+++ b/css/app.css
@@ -68,8 +68,9 @@ body {
   opacity: 0;
 }
 
-.hidden {
-  display: none;
+.flex {
+  display: flex;
+  align-items: center;
 }
 
 .larger {
